Version 0.11
* Moved speech dispatcher modules to /usr/libexec

Version 0.10.1
* Add French, Norwegian Bokmål, Brazilian Portuguese, and Russian translations.
* Add voxin module variant.
* Make ibmtts and voxin use the common queue helpers.
* Fix python bindings against python 3.9.
* Reference the golang bindings.
* Add spd_get_client_id.
* Make key, char and sound_icon commands return message id.

Version 0.10
* Add punctuation level "most".
* Rework thread synchronization.
* Move espeak/espeak-ng audio queuing to shared file, rework it.
* Make baratinoo use this audio queueing, enable marks, and support
responsiveness parameter.
* Add support for Baratinoo engine 8.6
* Show mark progression in spd-say.
* Add --character option to spd-say.
* Put country/region in language instead of variant.
* pico, generic: fix setting voice by language.
* generic: Add fallback voices for generic languages.
* symbols: Add support for SSML.
* symbols: Add SymbolPreprocFile directive to load several symbol files.
* symbols: Replace DefaultSymbolsPreproc directive with SymbolsPreproc directive
to have more fine-grained control over server preprocessing.
* symbols: Import emojis and unicode font variants support from NVDA and Unicode
CLDR and UnicodeData.
* symbols: Import some symbols from Orca.
* symbols: Add rules to drop gender-neutral forms.
* symbols: Add support for group references.
* Disable Mary-TTS module by default.
* Replace AudioPulseServer option with AudioPulseDevice.
* Fix default pulse latency to 10ms to avoid pulseaudio distorted output.
* Made client isolation stronger for Snap/Flatpak support.

Version 0.9.1
* Add module for the non-free IBM TTS (voxin) speech synthesis.
* Extend licence to later versions of GPL and LGPL.
* Update mailing list address to savannah.
* Make generic modules fallback to existing voices.

Version 0.9
* Add modules for non-free Baratinoo (VoxyGen) and Kali speech syntheses.
* Add configuration file for the Mary-TTS system.