@@ -26,6 +26,7 @@ GenericExecuteSynth \
  "printf %s \'$DATA\' >/tmp/swift-speak.txt && /opt/swift/bin/swift -p speech/rate=$RATE,speech/pitch/shift=$PITCH,tts/content-type=text/plain,tts/text-encoding=utf-8,config/default-voice=$VOICE -f /tmp/swift-speak.txt -o /tmp/swift-speak.wav&& $PLAY_COMMAND /tmp/swift-speak.wav" 
 
 GenericCmdDependency "/opt/swift/bin/swift"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
 # all the characters that should be replaced by whitespaces in
