@@ -1,5 +1,6 @@
 Version 0.11
 * Moved speech dispatcher modules to /usr/libexec
+* generic: Add support for sound icons
 
 Version 0.10.1
 * Add French, Norwegian Bokmål, Brazilian Portuguese, and Russian translations.
